Claims Process Quarkus

--- a/claims-process-wf/src/main/resources/META-INF/resources/index.html
+++ b/claims-process-wf/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>claim-process - 1.0.0-SNAPSHOT</title>
+    <title>claims-process-wf - 1.0.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -143,8 +143,8 @@
         <div class="right-section">
             <h3>Application</h3>
             <ul>
-                <li>GroupId: <code>org.acme</code></li>
-                <li>ArtifactId: <code>claim-process</code></li>
+                <li>GroupId: <code>com.redhat</code></li>
+                <li>ArtifactId: <code>claims-process-wf</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.2.3.Final-redhat-00013</code></li>
             </ul>
